--- a/bistro-dao/Cargo.toml
+++ b/bistro-dao/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bistro-contract = { path = "../bistro-contract" }
+arangors = "0.4.2"
+
