--- a/bistro-service/Cargo.toml
+++ b/bistro-service/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 bistro-contract = { path = "../bistro-contract" }
+bistro-dao = { path = "../bistro-dao" }
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.56"
 actix = "0.9.0"
