--- a/bistro-contract/Cargo.toml
+++ b/bistro-contract/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 serde = { version = "1.0.114", features = ["derive"]}
 serde_json = "1.0.56"
 chrono = "0.4.13"
+validator = { version = "0.11", features = ["derive"] }
+lazy_static = "1.4.0"
+regex = "1"
