--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4"
+rocket_contrib = "0.4"
 chrono = "0.4"
 arangors = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
