--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 rocket = "0.4"
 rocket_contrib = "0.4"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"]  }
 arangors = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2", features = ["full"] }
