--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ edition = "2018"
 
 [dependencies]
 rocket = { git = "https://github.com/SergioBenitez/Rocket" }
-rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["databases"] }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
 chrono = { version = "0.4", features = ["serde"]  }
 arangors = { version = "0.4", features = ["surf_async"], default-features = false }
-#r2d2_arangors = { version = "0.2" }
-#r2d2 = { version = "0.8" }
+mobc-arangors = { version = "0.2", features = ["surf"], default-features = false }
+mobc = "0.7.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2", features = ["full"] }
