--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,17 +1,23 @@
 [default]
 address = "0.0.0.0"
 port = 8001
-log_level = "normal"
+
+# Database
 database_username = "bistrouser"
 database_password = "bistropassword"
 database_use_jwt = false
+database_collection = "bistro"
 
 [debug]
 workers = 1
 keep_alive = 0
+
+# Database
 database_url = "http://localhost:8529"
 
 [release]
+log_level = "normal"
+# Database
 database_url = "http://database:8529"
 
 
