--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ harness = false
 [dev-dependencies]
 cucumber = { package = "cucumber_rust", version = "0.8", features = ["macros"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+isahc = { version = "1.1", features = ["json"] }
