--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,6 @@ harness = false
 [dev-dependencies]
 cucumber_rust = { version = "0.8", features = ["macros"] }
 restson = "0.7"
+serde_json = "1.0"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 toml = "0.5"
