--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ arangors = { version = "0.4", features = ["surf_async"], default-features = fals
 chrono = { version = "0.4", features = ["serde"]  }
 mobc-arangors = { version = "0.2", features = ["surf"], default-features = false }
 mobc = "0.7"
-rocket = { git = "https://github.com/SergioBenitez/Rocket" }
-rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev= "2366bff05fe435977106106b918bb7e5a1d057df" }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev= "2366bff05fe435977106106b918bb7e5a1d057df" }
 serde = { version = "1.0", features = ["derive"] }
 time = "0.2"
 
