--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
       - uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: nightly
-      - run: cargo build
-      - run: cargo test --test cucumber
-      
+      - run: | 
+          cargo run &
+          cargo test --test cucumber 
   release:
     runs-on: ubuntu-latest
     needs: build
