--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          override: true
           toolchain: nightly
       - uses: Swatinem/rust-cache@v1
-      - run: cargo build
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
       - run: | 
           cargo run &
           cargo test --test cucumber 
