--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
       - run: | 
           cargo run &
           cargo test --test cucumber 
+  
   release:
     runs-on: ubuntu-latest
     needs: build
@@ -62,10 +63,13 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          override: true
           toolchain: nightly
       - uses: Swatinem/rust-cache@v1
-      - run: cargo build
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
       - name: Push to ghcr.io
         uses: docker/build-push-action@v2
         with:
